# kythera-api-wrapper

./: .pre-commit-config.yaml  .pypirc-example  CHANGELOG.md  CLIENT_STRUCTURE.md  FINAL_STATUS_REPORT.md  MANIFEST.in  Makefile  README.md  dev.bat  final_verification.py  methods_output.txt  methods_output2.txt  openapi-diff-openapi-v1.1-to-openapi-v1.2.md  openapi-v1(deprecated-2025-07-21).json  openapi-v1.1.json  openapi-v1.3.json  openapi-v1.4.json  openapi-v1.json  output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_clients.py  verification.py
docs/: AddIn.ipynb  GetPnl.ipynb  GetPrices.ipynb
examples/: authenticated_client_example.py  basic_usage.py  comprehensive_client_usage.py  msal_authentication_example.py  test_client_structure.py  unified_client_example.py
src/kythera_kdx/: __init__.py  addin.py  auth.py  auth_backup.py  auth_new.py  authenticated_client.py  client.py  exceptions.py  fund_families.py  funds.py  globals.py  indexes.py  instrument_groups.py  instrument_parameters.py  instruments.py  intraday.py  issuers.py  kythera_kdx.py  models.py  models_v1.py  pnl.py  portfolios.py  positions.py  price_models.py  prices.py  risk_factors.py  subclasses.py  trades.py  utils.py
tests/: __init__.py  simple_test.py  test_authenticated_client.py  test_client.py  test_exceptions.py  test_final_msal.py  test_indexes_client.py  test_indexes_property.py  test_issuers_client.py  test_kythera_kdx.py  test_methods.py  test_msal_only.py  test_pnl_client.py  test_risk_factors_client.py  test_utils.py
tools/: openapi_diff.py
